--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>form input</title>
-  </head>
-  <body>
-    <form action="">
-      <fieldset>
-        <legend>로그인 정보</legend>
-        <ul>
-          <li>
-            <label for="text">ID</label>
-            <input type="text" id="text" required />
-          </li>
-          <li>
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" required />
-          </li>
-        </ul>
-      </fieldset>
-      <input type="submit" value="로그인" />
-    </form>
-  </body>
-</html>
+<head>
+	<link rel="stylesheet" href="./lib/css/style.css">
+</head>
+<body>
+<div id="login_wrap">
+    <div>
+        <h1>Login Form</h1>
+        <form action="login_ok.php" method="post" id="login_form">
+            <p><input type="text" name="userid" id="userid" placeholder="ID"></p>
+            <p><input type="password" name="userpw" id="userpw" placeholder="Password"></p>
+            <p class="forgetpw"><a href="changepw.php">Forget Password?</a></p>
+            <p><input type="submit" value="Login" class="login_btn"></p>
+        </form>
+        <p class="regist_btn">Not a member? &nbsp;<a href="regist.php">Sign Up</a></p>
+    </div>
+</div>
+</body>
