--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<?php session_start(); ?>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <title>PHP Session Login Test</title>
+	    <meta charset="UTF-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    	<title>Wlkate LoginPage</title>
+    	<link rel="preconnect" href="https://fonts.googleapis.com">
+    	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    	<link href="https://fonts.googleapis.com/css?family=Roboto:wght@400; 700&display=swap" rel="stylesheet"> <link rel="stylesheet"		href="./css/shared.css">
+    	<link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
-        <h1>Hello, world!</h1>
-        <?php
+        <h1>Login</h1>
             if(!isset($_SESSION['user_id']) || !isset($_SESSION['user_name'])) {
                 echo "<p>로그인을 해 주세요. <a href=\"login.php\">[로그인]</a></p>";
             } else {
@@ -16,8 +19,5 @@
                 echo "<p><strong>$user_name</strong>($user_id)님 환영합니다.";
                 echo "<a href=\"logout.php\">[로그아웃]</a></p>";
             }
-        ?>
         <hr />
-        <p>투명한 유리구슬처럼 보이지만 그렇게 쉽게 깨지진 않을 거야</p>
     </body>
-</html>
